Fixed issues where the background video doesn’t work and the audio player gets stuck on the social icons.

--- a/style.css
+++ b/style.css
@@ -323,6 +323,15 @@ audio {
     }
 }
 
+@media (max-width: 767px) {
+    audio {
+        position:absolute;
+        top: 0px;
+        right: 0px;
+        padding: 20px;
+    }
+}
+
 .footer {
     background-color: #f8f8f8;
     padding: 20px 0;
